[gd_scene load_steps=40 format=2]

[ext_resource path="res://scenes/player/Player.gd" type="Script" id=1]
[ext_resource path="res://addons/imjp94.yafsm/src/StateMachinePlayer.gd" type="Script" id=2]
[ext_resource path="res://addons/imjp94.yafsm/src/states/State.gd" type="Script" id=3]
[ext_resource path="res://addons/imjp94.yafsm/src/states/StateMachine.gd" type="Script" id=4]
[ext_resource path="res://addons/imjp94.yafsm/src/transitions/Transition.gd" type="Script" id=5]
[ext_resource path="res://assets/models/fish/salmon/Salmon.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/sprites/shadow/Shadow.tscn" type="PackedScene" id=7]
[ext_resource path="res://addons/imjp94.yafsm/src/conditions/Condition.gd" type="Script" id=8]

[sub_resource type="CapsuleShape" id=1]
radius = 0.0619141
height = 0.555022

[sub_resource type="Resource" id=27]
script = ExtResource( 3 )
__meta__ = {
"graph_offset": Vector2( 628, -20 )
}
name = "Charge"

[sub_resource type="Resource" id=25]
script = ExtResource( 3 )
__meta__ = {
"graph_offset": Vector2( 328, -20 )
}
name = "Entry"

[sub_resource type="Resource" id=26]
script = ExtResource( 3 )
__meta__ = {
"graph_offset": Vector2( 488, -20 )
}
name = "Move"

[sub_resource type="Resource" id=42]
script = ExtResource( 3 )
__meta__ = {
"graph_offset": Vector2( 539, 120 )
}
name = "Cutscene"

[sub_resource type="Resource" id=31]
script = ExtResource( 8 )
name = "charge_end"

[sub_resource type="Resource" id=32]
script = ExtResource( 5 )
from = "Charge"
to = "Move"
conditions = {
"charge_end": SubResource( 31 )
}
priority = 0

[sub_resource type="Resource" id=47]
script = ExtResource( 8 )
name = "cutscene_start"

[sub_resource type="Resource" id=43]
script = ExtResource( 5 )
from = "Charge"
to = "Cutscene"
conditions = {
"cutscene_start": SubResource( 47 )
}
priority = 0

[sub_resource type="Resource" id=28]
script = ExtResource( 5 )
from = "Entry"
to = "Move"
conditions = {
}
priority = 0

[sub_resource type="Resource" id=29]
script = ExtResource( 8 )
name = "charge"

[sub_resource type="Resource" id=30]
script = ExtResource( 5 )
from = "Move"
to = "Charge"
conditions = {
"charge": SubResource( 29 )
}
priority = 0

[sub_resource type="Resource" id=48]
script = ExtResource( 8 )
name = "cutscene_start"

[sub_resource type="Resource" id=44]
script = ExtResource( 5 )
from = "Move"
to = "Cutscene"
conditions = {
"cutscene_start": SubResource( 48 )
}
priority = 0

[sub_resource type="Resource" id=45]
script = ExtResource( 8 )
name = "cutscene_end"

[sub_resource type="Resource" id=46]
script = ExtResource( 5 )
from = "Cutscene"
to = "Move"
conditions = {
"cutscene_end": SubResource( 45 )
}
priority = 0

[sub_resource type="Resource" id=33]
script = ExtResource( 4 )
name = ""
states = {
"Charge": SubResource( 27 ),
"Cutscene": SubResource( 42 ),
"Entry": SubResource( 25 ),
"Move": SubResource( 26 )
}
transitions = {
"Charge": {
"Cutscene": SubResource( 43 ),
"Move": SubResource( 32 )
},
"Cutscene": {
"Move": SubResource( 46 )
},
"Entry": {
"Move": SubResource( 28 )
},
"Move": {
"Charge": SubResource( 30 ),
"Cutscene": SubResource( 44 )
}
}

[sub_resource type="Resource" id=15]
script = ExtResource( 3 )
__meta__ = {
"graph_offset": Vector2( 308, -20 )
}
name = "Entry"

[sub_resource type="Resource" id=17]
script = ExtResource( 3 )
__meta__ = {
"graph_offset": Vector2( 488, -20 )
}
name = "Idle"

[sub_resource type="Resource" id=21]
script = ExtResource( 3 )
__meta__ = {
"graph_offset": Vector2( 665.5, -20 )
}
name = "Move"

[sub_resource type="Resource" id=22]
script = ExtResource( 5 )
from = "Entry"
to = "Idle"
conditions = {
}
priority = 0

[sub_resource type="Resource" id=34]
script = ExtResource( 5 )
from = "Idle"
to = "Move"
conditions = {
}
priority = 0

[sub_resource type="Resource" id=24]
script = ExtResource( 5 )
from = "Move"
to = "Idle"
conditions = {
}
priority = 0

[sub_resource type="Resource" id=19]
script = ExtResource( 4 )
name = ""
states = {
"Entry": SubResource( 15 ),
"Idle": SubResource( 17 ),
"Move": SubResource( 21 )
}
transitions = {
"Entry": {
"Idle": SubResource( 22 )
},
"Idle": {
"Move": SubResource( 34 )
},
"Move": {
"Idle": SubResource( 24 )
}
}

[sub_resource type="Resource" id=36]
script = ExtResource( 3 )
__meta__ = {
"graph_offset": Vector2( 468, -20 )
}
name = "Charging"

[sub_resource type="Resource" id=35]
script = ExtResource( 3 )
__meta__ = {
"graph_offset": Vector2( 288, -20 )
}
name = "Entry"

[sub_resource type="Resource" id=37]
script = ExtResource( 3 )
__meta__ = {
"graph_offset": Vector2( 668, -20 )
}
name = "Rush"

[sub_resource type="Resource" id=41]
script = ExtResource( 8 )
name = "charging_end"

[sub_resource type="Resource" id=39]
script = ExtResource( 5 )
from = "Charging"
to = "Rush"
conditions = {
"charging_end": SubResource( 41 )
}
priority = 0

[sub_resource type="Resource" id=38]
script = ExtResource( 5 )
from = "Entry"
to = "Charging"
conditions = {
}
priority = 0

[sub_resource type="Resource" id=40]
script = ExtResource( 4 )
name = ""
states = {
"Charging": SubResource( 36 ),
"Entry": SubResource( 35 ),
"Rush": SubResource( 37 )
}
transitions = {
"Charging": {
"Rush": SubResource( 39 )
},
"Entry": {
"Charging": SubResource( 38 )
}
}

[node name="Player" type="KinematicBody" groups=["player"]]
collision_layer = 2
script = ExtResource( 1 )

[node name="RemoteTransform" type="RemoteTransform" parent="."]
remote_path = NodePath("../RayCastsContainer/RayCasts")
update_rotation = false
update_scale = false

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="Skin" type="Spatial" parent="."]

[node name="Salmon" parent="Skin" instance=ExtResource( 6 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, -0.0803196, 0 )

[node name="StateMachines" type="Node" parent="."]

[node name="MainStateMachine" type="Node" parent="StateMachines"]
script = ExtResource( 2 )
state_machine = SubResource( 33 )

[node name="MoveStateMachine" type="Node" parent="StateMachines/MainStateMachine"]
script = ExtResource( 2 )
state_machine = SubResource( 19 )
active = false

[node name="ChargeStateMachine" type="Node" parent="StateMachines/MainStateMachine"]
script = ExtResource( 2 )
state_machine = SubResource( 40 )
active = false

[node name="RayCastsContainer" type="Node" parent="."]

[node name="RayCasts" type="Spatial" parent="RayCastsContainer"]

[node name="ShadowRayCast" type="RayCast" parent="RayCastsContainer/RayCasts"]
enabled = true
cast_to = Vector3( 0, -1000, 0 )

[node name="Shadow" parent="RayCastsContainer/RayCasts/ShadowRayCast" instance=ExtResource( 7 )]
visible = false

[node name="Timers" type="Node" parent="."]

[node name="ChargeRushTimer" type="Timer" parent="Timers"]
one_shot = true

[connection signal="charging_animation_end" from="Skin/Salmon" to="." method="_on_Salmon_charging_animation_end"]
[connection signal="transited" from="StateMachines/MainStateMachine" to="." method="_on_MainStateMachine_transited"]
[connection signal="transited" from="StateMachines/MainStateMachine/MoveStateMachine" to="." method="_on_MoveStateMachine_transited"]
[connection signal="transited" from="StateMachines/MainStateMachine/ChargeStateMachine" to="." method="_on_ChargeStateMachine_transited"]
[connection signal="timeout" from="Timers/ChargeRushTimer" to="." method="_on_ChargeRushTimer_timeout"]
